--- a/codezone_P7/api.html
+++ b/codezone_P7/api.html
@@ -15,7 +15,50 @@
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
 
   <title>API HTML</title>   
- 
+   <!-- --------------- HEADER --------------- -->
+   <nav id="header">
+    <div class="nav-logo">
+      <p class="nav-name">Tutorial</p>
+      <span>.</span>
+    </div>
+    <div class="nav-menu" id="myNavMenu">
+      <ul class="nav_menu_list">
+        <li class="nav_list">
+          <a href="table.html" class="nav-link" target="_blank">TABLE</a>
+          <div class="circle"></div>
+        <li class="nav_list">
+          <a href="form.html" class="nav-link" target="_blank">FORM</a>
+          <div class="circle"></div>
+        </li>
+        <li class="nav_list">
+          <a href="api.html" class="nav-link" target="_blank">API</a>
+          <div class="circle"></div>
+        </li>
+        <li class="nav_list">
+          <a href="canvas.html" class="nav-link" target="_blank">CANVAS</a>
+          <div class="circle"></div>
+        </li>
+        <li class="nav_list">
+          <a href="deploy.html" class="nav-link" target="_blank">DEPLOY</a>
+          <div class="circle"></div>
+        <li class="nav_list">
+          <a href="tutorial.html#Hasil" class="nav-link">EDIT</a>
+          <div class="circle"></div>
+        </li>
+      </ul>
+    </div>
+
+    <div class="nav-button">
+      <button class="btn"><a href="https://fiqhi27.github.io/responsi-WebDesign7">
+          Back Home
+        </a>
+      </button>
+    </div>
+    <div class="nav-menu-btn">
+      <i class="uil uil-bars" onclick="myMenuFunction()"></i>
+    </div>
+  </nav>
+
  <!-- -------------- API BOX ---------------- -->
    <main class="wrapper">
     <section class="section" id="api">
