--- a/codezone_P7/tutorial.html
+++ b/codezone_P7/tutorial.html
@@ -46,7 +46,7 @@
             <a href="deploy.html" class="nav-link" target="_blank">DEPLOY</a>
             <div class="circle"></div>
           <li class="nav_list">
-            <a class="nav-link" href="#Hasil">EDIT</a>
+            <a href="tutorial.html#Hasil" class="nav-link">EDIT</a>
             <div class="circle"></div>
           </li>
         </ul>
