--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="circle"></div>
           </li>
           <li class="nav_list">
-            <a href="file:///C:/Users/Fiqhi/Tugas%20Kuliah/SEMESTER%205/DESIGN%20WEB/responsi-WebDesign/codezone_P7/tutorial.html" class="nav-link" target="_blank">Tutorial</a>
+            <a href="C:\Users\Fiqhi\Tugas Kuliah\SEMESTER 5\DESIGN WEB\responsi_Update\codezone_P7\tutorial.html" class="nav-link" target="_blank">Tutorial</a>
             <div class="circle"></div>
           </li>
         </ul>
