--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="circle"></div>
           </li>
           <li class="nav_list">
-            <a href="\codezone_P7\tutorial.html" class="nav-link" target="_blank">Tutorial</a>
+            <a href="responsi_Update\codezone_P7\tutorial.html" class="nav-link" target="_blank">Tutorial</a>
             <div class="circle"></div>
           </li>
         </ul>
