--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <a href="#contact" class="nav-link">Contact</a>
             <div class="circle"></div>
           </li>
-          <li class="nav_list">
-            <a href="responsi_Update\codezone_P7\tutorial.html" class="nav-link" target="_blank">Tutorial</a>
+           <li class="nav_list">
+            <a href="codezone_P7/tutorial.html" class="nav-link">Tutorial</a>
             <div class="circle"></div>
           </li>
         </ul>
