--- a/codezone_P7/tutorial.html
+++ b/codezone_P7/tutorial.html
@@ -86,11 +86,18 @@
             </button>
           </div>
           <div class="social_icons">
-            <div class="icon"><a href="https://www.instagram.com/fiqhi_fahriansyah?igsh=MXZsNzFwaXFzaWI1dg== "><i
-                  class="uil uil-instagram"></i></div></a>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-dribbble"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
+            <a href="https://www.instagram.com/fiqhi_fahriansyah/" target="_blank">
+              <div class="icon"><i class="uil uil-instagram"></i></div>
+            </a>
+            <a href="https://www.linkedin.com/in/fiqhi-fahriansyah-b74369251/" target="_blank">
+              <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+            </a>
+            <a href="https://dribbble.com/fiqhifahriansyah" target="_blank">
+              <div class="icon"><i class="uil uil-dribbble"></i></div>
+            </a>
+            <a href="https://github.com/Fiqhi27?tab=repositories" target="_blank">
+              <div class="icon"><i class="uil uil-github-alt"></i></div>
+            </a>
           </div>
         </div>
         <div class="featured-image">
@@ -213,10 +220,18 @@
           </ul>
         </div>
         <div class="footer-social-icons">
-          <div class="icon"><i class="uil uil-instagram"></i></div>
-          <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-          <div class="icon"><i class="uil uil-dribbble"></i></div>
-          <div class="icon"><i class="uil uil-github-alt"></i></div>
+          <a href="https://www.instagram.com/fiqhi_fahriansyah/" target="_blank">
+            <div class="icon"><i class="uil uil-instagram"></i></div>
+          </a>
+          <a href="https://www.linkedin.com/in/fiqhi-fahriansyah-b74369251/" target="_blank">
+            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+          </a>
+          <a href="https://dribbble.com/fiqhifahriansyah" target="_blank">
+            <div class="icon"><i class="uil uil-dribbble"></i></div>
+          </a>
+          <a href="https://github.com/Fiqhi27?tab=repositories" target="_blank">
+            <div class="icon"><i class="uil uil-github-alt"></i></div>
+          </a>
         </div>
         <div class="bottom-footer">
           <p>
