update semua tutorial

--- a/codezone_P7/form.html
+++ b/codezone_P7/form.html
@@ -104,7 +104,7 @@
       <div class="top-header"></div>
         <div class="container"></div> <!-- New container for content -->
           <div class="tags"></div>
-            <h1>Belajar HTML #11: Cara Membuat Form pada HTML</h1>
+            <h1>Belajar HTML: Cara Membuat Form pada HTML</h1>
             <p><strong>Author:</strong> Fiqhi Fahriansyah</p>
             <p><strong>Tanggal:</strong> 4 November 2024</p>
             <p><strong>Tags:</strong> #HTML5 #HTML</p>
