update btn copy

--- a/codezone_P7/canvas.html
+++ b/codezone_P7/canvas.html
@@ -176,10 +176,10 @@
 
       <div class="tutorial-box">
         <h2>Contoh </h2>
-        <textarea class="editor" rows="20" id="contentAPI" placeholder="Masukkan kode HTML dan CSS di sini">
+        <textarea class="editor" rows="20" id="contentAPI2" placeholder="Masukkan kode HTML dan CSS di sini">
           <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>
               </textarea>
-        <button onclick="copyCode('contentAPI')">Copy</button>
+        <button onclick="copyCode('contentAPI2')">Copy</button>
       </div>
 
 
