--- a/codezone_P7/form.html
+++ b/codezone_P7/form.html
@@ -131,13 +131,13 @@
 
           <div class="tutorial-box">
             <p>Contoh:</p>
-            <textarea class="editor" rows="20" id="contentForm" placeholder="Masukkan kode HTML dan CSS di sini">
+            <textarea class="editor" rows="20" id="contentForm3" placeholder="Masukkan kode HTML dan CSS di sini">
           <!-- TEXT -->
             <form action="proses.php" method="GET">
               <!-- form field di sini -->
               </form>
             </textarea>
-            <button onclick="copyCode('contentForm')">Copy</button>
+            <button onclick="copyCode('contentForm3')">Copy</button>
           </div>
       </div> <!-- End of container -->
       </div>
@@ -186,7 +186,7 @@
       <!-- Card Style untuk Latihan Page Margin -->
       <div class="tutorial-box">
         <h3>Code:</h3>
-        <textarea class="editor" rows="20" id="contentForm" placeholder="Masukkan kode HTML dan CSS di sini">
+        <textarea class="editor" rows="20" id="contentForm4" placeholder="Masukkan kode HTML dan CSS di sini">
             <!DOCTYPE html>
             <html>
             <head>
@@ -216,7 +216,7 @@
           </body>
           </html>
       </textarea>
-        <button onclick="copyCode('contentForm')">Copy</button>
+        <button onclick="copyCode('contentForm4')">Copy</button>
       </div>
 
       <div class="output-box">
@@ -251,7 +251,7 @@
       <div class="tutorial-box">
 
         <h3>Silakan ikuti kode berikut:</h3>
-        <textarea class="editor" rows="20" id="contentForm" placeholder="Masukkan kode HTML dan CSS di sini">
+        <textarea class="editor" rows="20" id="contentForm5" placeholder="Masukkan kode HTML dan CSS di sini">
 
         <!DOCTYPE html>
 <html>
@@ -284,7 +284,7 @@
         
       </textarea>
 
-        <button onclick="copyCode('contentForm')">Copy</button>
+        <button onclick="copyCode('contentForm5')">Copy</button>
       </div>
 
       <div class="output-box">
