--- a/codezone_P7/deploy.html
+++ b/codezone_P7/deploy.html
@@ -49,8 +49,8 @@
       </div>
   
       <div class="nav-button">
-        <button class="btn"><a href="https://fiqhi27.github.io/responsi-WebDesign7">
-            Back Home
+        <button class="btn"><a href="https://fiqhi27.github.io/responsi_Update/">
+          Back Home
           </a>
         </button>
       </div>
